--- a/edev-alibaba-trade-customer/pom.xml
+++ b/edev-alibaba-trade-customer/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>edev-alibaba-trade-customer</artifactId>
-    <packaging>jar</packaging>
+    <version>1.0.0-${maven.build.timestamp}</version>
     <parent>
         <artifactId>edev-alibaba-parent</artifactId>
         <groupId>com.edev.trade</groupId>
@@ -18,6 +18,9 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+    <properties>
+        <maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>
+    </properties>
     <build>
         <plugins>
             <plugin>
