Add the contract test

--- a/edev-alibaba-trade-order/pom.xml
+++ b/edev-alibaba-trade-order/pom.xml
@@ -14,4 +14,11 @@
     <properties>
         <maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-contract-stub-runner</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
