--- a/edev-alibaba-trade-order/src/main/resources/bootstrap.yml
+++ b/edev-alibaba-trade-order/src/main/resources/bootstrap.yml
@@ -54,7 +54,8 @@ spring:
 server:
   port: 9005
 feign:
-  sentinel: true
+  sentinel:
+    enabled: true
 ribbon:
   connectTimeout: 10000
   readTimeout: 15000
