--- a/edev-alibaba-trade-customer/src/test/resources/bootstrap.yml
+++ b/edev-alibaba-trade-customer/src/test/resources/bootstrap.yml
@@ -1,33 +1,15 @@
 spring:
-  application:
-    name: service-customer
-  profiles:
-    active: dev
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
-mybatis:
-  mapperLocations: classpath*:mapper/*Mapper.xml
-logging:
-  level:
-    com.edev.trade: INFO
-    com.edev.support: INFO
-    com.edev.trade.query.dao: DEBUG
-    com.edev.support.dao: DEBUG
-    com.edev.support.cache: DEBUG
-    com.alibaba: WARN
----
-spring:
-  profiles: dev
   cloud:
     nacos:
       discovery:
-        server-addr: localhost:8848
-        username: nacos
-        password: nacos
+        enabled: false
+        register-enabled: false
       config:
-        server-addr: localhost:8848
-        file-extension: yaml
+        enabled: false
+        refresh-enabled: false
     sentinel:
       transport:
         dashboard: localhost:8858
@@ -58,12 +40,11 @@ management:
     web:
       exposure:
         include: '*'
----
-spring:
-  profiles: docker
-  cloud:
-    config:
-      uri: ${GIT_URL}
-      failFast: true
-server:
-  port: ${SERVICE_PORT:9002}
+mybatis:
+  mapperLocations: classpath*:mapper/*Mapper.xml
+logging:
+  level:
+    com.edev.trade: INFO
+    com.edev.support: INFO
+    com.edev.trade.query.dao: DEBUG
+    com.edev.support.dao: DEBUG
