--- a/edev-alibaba-trade-customer/src/main/resources/bootstrap.yml
+++ b/edev-alibaba-trade-customer/src/main/resources/bootstrap.yml
@@ -62,8 +62,11 @@ management:
 spring:
   profiles: docker
   cloud:
-    config:
-      uri: ${GIT_URL}
-      failFast: true
+    nacos:
+      discovery:
+        server-addr: ${NACOS_ADDR}
+      config:
+        server-addr: ${NACOS_ADDR}
+        file-extension: yaml
 server:
   port: ${SERVICE_PORT:9002}
