add the gateway

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 /.idea/
-/pom.xml
+/edev-alibaba-trade-customer/target
+/edev-alibaba-trade-gateway/target
+/edev-alibaba-trade-inventory/target
+/edev-alibaba-trade-order/target
+/edev-alibaba-trade-product/target
+/**/*.iml
