--- a/edev-alibaba-trade-inventory/pom.xml
+++ b/edev-alibaba-trade-inventory/pom.xml
@@ -5,13 +5,40 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>edev-alibaba-trade-inventory</artifactId>
     <version>1.0.0-${maven.build.timestamp}</version>
+    <properties>
+        <maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>
+    </properties>
     <parent>
         <artifactId>edev-alibaba-parent</artifactId>
         <groupId>com.edev.trade</groupId>
         <version>1.0.0</version>
         <relativePath/>
     </parent>
-    <properties>
-        <maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>
-    </properties>
+    <dependencies>
+        <!-- seata -->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-seata</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>io.seata</groupId>
+                    <artifactId>seata-all</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>io.seata</groupId>
+                    <artifactId>seata-spring-boot-starter</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>io.seata</groupId>
+            <artifactId>seata-all</artifactId>
+            <version>1.4.2</version>
+        </dependency>
+        <dependency>
+            <groupId>io.seata</groupId>
+            <artifactId>seata-spring-boot-starter</artifactId>
+            <version>1.4.2</version>
+        </dependency>
+    </dependencies>
 </project>
