--- a/edev-alibaba-trade-inventory/src/main/resources/bootstrap.yml
+++ b/edev-alibaba-trade-inventory/src/main/resources/bootstrap.yml
@@ -15,6 +15,7 @@ logging:
     com.edev.trade.query.dao: DEBUG
     com.edev.support.dao: DEBUG
     com.alibaba: WARN
+    io.seata: INFO
 ---
 spring:
   profiles: dev
