modify fir contract tests.

--- a/edev-alibaba-trade-customer/src/test/resources/bootstrap.yml
+++ b/edev-alibaba-trade-customer/src/test/resources/bootstrap.yml
@@ -48,3 +48,5 @@ logging:
     com.edev.support: INFO
     com.edev.trade.query.dao: DEBUG
     com.edev.support.dao: DEBUG
+seata:
+  enabled: false
