--- a/edev-alibaba-trade-gateway/edev-alibaba-trade-gateway.yaml
+++ b/edev-alibaba-trade-gateway/edev-alibaba-trade-gateway.yaml
@@ -18,14 +18,16 @@ spec:
     spec:
       affinity:
         podAntiAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-            - labelSelector:
-                matchExpressions:
-                  - key: "app"
-                    operator: In
-                    values:
-                      - edev-alibaba-trade-gateway
-              topologyKey: "kubernetes.io/hostname"
+          preferredDuringSchedulingIgnoredDuringExecution:
+            - weight: 50
+              podAffinityTerm:
+                labelSelector:
+                  matchExpressions:
+                    - key: "app"
+                      operator: In
+                      values:
+                        - edev-alibaba-trade-gateway
+                topologyKey: "kubernetes.io/hostname"
       containers:
       - name: edev-alibaba-trade-gateway
         image: repository:5000/edev-alibaba-trade-gateway:<VERSION>
@@ -43,10 +45,28 @@ metadata:
   name: edev-alibaba-trade-gateway
   namespace: default
 spec:
-  type: NodePort
   ports:
   - port: 9009
     targetPort: 9009
-    nodePort: 31009
   selector:
     app: edev-alibaba-trade-gateway
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: ingress-edev-alibaba
+  namespace: default
+  annotations:
+    kubernetes.io/ingress.class: "nginx"
+spec:
+  rules:
+    - host: trade
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: edev-alibaba-trade-gateway
+                port:
+                  number: 80
