--- a/edev-alibaba-trade-inventory/edev-alibaba-trade-inventory.yaml
+++ b/edev-alibaba-trade-inventory/edev-alibaba-trade-inventory.yaml
@@ -18,14 +18,16 @@ spec:
     spec:
       affinity:
         podAntiAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-            - labelSelector:
-                matchExpressions:
-                  - key: "app"
-                    operator: In
-                    values:
-                      - edev-alibaba-trade-inventory
-              topologyKey: "kubernetes.io/hostname"
+          preferredDuringSchedulingIgnoredDuringExecution:
+            - weight: 50
+              podAffinityTerm:
+                labelSelector:
+                  matchExpressions:
+                    - key: "app"
+                      operator: In
+                      values:
+                        - edev-alibaba-trade-inventory
+                topologyKey: "kubernetes.io/hostname"
       containers:
       - name: edev-alibaba-trade-inventory
         image: repository:5000/edev-alibaba-trade-inventory:<VERSION>
