--- a/edev-alibaba-trade-order/edev-alibaba-trade-order.yaml
+++ b/edev-alibaba-trade-order/edev-alibaba-trade-order.yaml
@@ -18,14 +18,16 @@ spec:
     spec:
       affinity:
         podAntiAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-            - labelSelector:
-                matchExpressions:
-                  - key: "app"
-                    operator: In
-                    values:
-                      - edev-alibaba-trade-order
-              topologyKey: "kubernetes.io/hostname"
+          preferredDuringSchedulingIgnoredDuringExecution:
+            - weight: 50
+              podAffinityTerm:
+                labelSelector:
+                  matchExpressions:
+                    - key: "app"
+                      operator: In
+                      values:
+                        - edev-alibaba-trade-order
+                topologyKey: "kubernetes.io/hostname"
       containers:
       - name: edev-alibaba-trade-order
         image: repository:5000/edev-alibaba-trade-order:<VERSION>
