--- a/edev-alibaba-trade-product/src/main/resources/bootstrap.yml
+++ b/edev-alibaba-trade-product/src/main/resources/bootstrap.yml
@@ -64,6 +64,8 @@ spring:
     nacos:
       discovery:
         server-addr: ${NACOS_ADDR}
+        username: ${NACOS_USR:nacos}
+        password: ${NACOS_PWD:nacos}
       config:
         server-addr: ${NACOS_ADDR}
         file-extension: yaml
