change the test units with json files

--- a/edev-alibaba-trade-inventory/src/test/resources/bootstrap.yml
+++ b/edev-alibaba-trade-inventory/src/test/resources/bootstrap.yml
@@ -50,3 +50,6 @@ logging:
     com.edev.support.dao: DEBUG
 seata:
   enabled: false
+stubrunner:
+  idsToServiceIds:
+    edev-alibaba-trade-product: service-product
