--- a/edev-alibaba-trade-inventory/pom.xml
+++ b/edev-alibaba-trade-inventory/pom.xml
@@ -15,6 +15,11 @@
         <relativePath/>
     </parent>
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-contract-stub-runner</artifactId>
+            <scope>test</scope>
+        </dependency>
         <!-- seata -->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
