change the gateway's k8s yaml file with ingress.

--- a/edev-alibaba-trade-gateway/edev-alibaba-trade-gateway.yaml
+++ b/edev-alibaba-trade-gateway/edev-alibaba-trade-gateway.yaml
@@ -35,7 +35,6 @@ spec:
         env:
           - name: NACOS_ADDR
             value: "nacos-cluster:8848"
-
 ---
 kind: Service
 apiVersion: v1
@@ -54,7 +53,7 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: ingress-edev-alibaba
+  name: ingress-edev-trade
   namespace: default
   annotations:
     kubernetes.io/ingress.class: "nginx"
