change yaml file for connecting to nacos

--- a/edev-alibaba-trade-customer/edev-alibaba-trade-customer.yaml
+++ b/edev-alibaba-trade-customer/edev-alibaba-trade-customer.yaml
@@ -34,7 +34,7 @@ spec:
         imagePullPolicy: Always
         env:
           - name: NACOS_ADDR
-            value: "nacos-cluster:8848"
+            value: "nacos:8848"
 
 ---
 kind: Service
