1) change code to the lambda expression and the functional programming. 2) fix bugs about the domain object's override functions 3) add the function of discount

--- a/edev-alibaba-trade-gateway/src/main/resources/bootstrap.yml
+++ b/edev-alibaba-trade-gateway/src/main/resources/bootstrap.yml
@@ -56,7 +56,9 @@ management:
       exposure:
         include: '*'
 logging:
-  # config: classpath:logback-dev.xml
+  config: classpath:logback-dev.xml
+  level:
+    com.alibaba.nacos: WARN
 ---
 spring:
   profiles: docker
