--- a/edev-alibaba-trade-gateway/edev-alibaba-trade-gateway.yaml
+++ b/edev-alibaba-trade-gateway/edev-alibaba-trade-gateway.yaml
@@ -32,6 +32,13 @@ spec:
       - name: edev-alibaba-trade-gateway
         image: repository:5000/edev-alibaba-trade-gateway:<VERSION>
         imagePullPolicy: Always
+        resources:
+          limits:
+            cpu: 500m
+            memory: 1000Mi
+          requests:
+            cpu: 100m
+            memory: 300Mi
         env:
           - name: NACOS_ADDR
             value: "nacos:8848"
