--- a/edev-alibaba-trade-inventory/edev-alibaba-trade-inventory.yaml
+++ b/edev-alibaba-trade-inventory/edev-alibaba-trade-inventory.yaml
@@ -32,10 +32,16 @@ spec:
       - name: edev-alibaba-trade-inventory
         image: repository:5000/edev-alibaba-trade-inventory:<VERSION>
         imagePullPolicy: Always
+        resources:
+          limits:
+            cpu: 500m
+            memory: 1000Mi
+          requests:
+            cpu: 100m
+            memory: 300Mi
         env:
           - name: NACOS_ADDR
             value: "nacos:8848"
-
 ---
 kind: Service
 apiVersion: v1
