--- a/seata.yaml
+++ b/seata.yaml
@@ -65,6 +65,13 @@ spec:
         - name: seata
           image: repository:5000/seata
           imagePullPolicy: IfNotPresent
+          resources:
+            limits:
+              cpu: 500m
+              memory: 800Mi
+            requests:
+              cpu: 100m
+              memory: 200Mi
           env:
             - name: SEATA_PORT
               value: "8091"
