--- a/skywalking/edev-alibaba-trade-product.yaml
+++ b/skywalking/edev-alibaba-trade-product.yaml
@@ -32,10 +32,17 @@ spec:
       - name: edev-alibaba-trade-product
         image: repository:5000/edev-alibaba-trade-product
         imagePullPolicy: Always
+        resources:
+          limits:
+            cpu: 500m
+            memory: 1000Mi
+          requests:
+            cpu: 100m
+            memory: 300Mi
         command: ["java", "-Djava.security.egd=file:/dev/./urandom", "-javaagent:/var/lib/skywalking/agent/skywalking-agent.jar", "-jar", "/app.jar","--spring.profiles.active=docker"]
         env:
           - name: NACOS_ADDR
-            value: "nacos-cluster:8848"
+            value: "nacos:8848"
           - name: SW_AGENT_NAME
             value: "edev-alibaba-trade-product"
           - name: SW_AGENT_COLLECTOR_BACKEND_SERVICES
@@ -53,8 +60,6 @@ spec:
       volumes:
       - name: skywalking
         emptyDir: {}
-
-
 ---
 kind: Service
 apiVersion: v1
