--- a/edev-alibaba-trade-customer/edev-alibaba-trade-customer.yaml
+++ b/edev-alibaba-trade-customer/edev-alibaba-trade-customer.yaml
@@ -2,19 +2,19 @@ kind: Deployment
 apiVersion: apps/v1
 metadata:
   labels:
-    app: edev-alibaba-trade-customer
-  name: edev-alibaba-trade-customer
+    app: edev-trade-customer
+  name: edev-trade-customer
   namespace: default
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: edev-alibaba-trade-customer
+      app: edev-trade-customer
   template:
     metadata:
-      name: edev-alibaba-trade-customer
+      name: edev-trade-customer
       labels:
-        app: edev-alibaba-trade-customer
+        app: edev-trade-customer
     spec:
       affinity:
         podAntiAffinity:
@@ -26,7 +26,7 @@ spec:
                     - key: "app"
                       operator: In
                       values:
-                        - edev-alibaba-trade-customer
+                        - edev-trade-customer
                 topologyKey: "kubernetes.io/hostname"
       containers:
       - name: edev-alibaba-trade-customer
@@ -47,12 +47,12 @@ kind: Service
 apiVersion: v1
 metadata:
   labels:
-    app: edev-alibaba-trade-customer
-  name: edev-alibaba-trade-customer
+    app: edev-trade-customer
+  name: edev-trade-customer
   namespace: default
 spec:
   ports:
   - port: 9002
     targetPort: 9002
   selector:
-    app: edev-alibaba-trade-customer
+    app: edev-trade-customer
