--- a/edev-alibaba-trade-inventory/edev-alibaba-trade-inventory.yaml
+++ b/edev-alibaba-trade-inventory/edev-alibaba-trade-inventory.yaml
@@ -2,19 +2,19 @@ kind: Deployment
 apiVersion: apps/v1
 metadata:
   labels:
-    app: edev-alibaba-trade-inventory
-  name: edev-alibaba-trade-inventory
+    app: edev-trade-inventory
+  name: edev-trade-inventory
   namespace: default
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: edev-alibaba-trade-inventory
+      app: edev-trade-inventory
   template:
     metadata:
-      name: edev-alibaba-trade-inventory
+      name: edev-trade-inventory
       labels:
-        app: edev-alibaba-trade-inventory
+        app: edev-trade-inventory
     spec:
       affinity:
         podAntiAffinity:
@@ -26,7 +26,7 @@ spec:
                     - key: "app"
                       operator: In
                       values:
-                        - edev-alibaba-trade-inventory
+                        - edev-trade-inventory
                 topologyKey: "kubernetes.io/hostname"
       containers:
       - name: edev-alibaba-trade-inventory
@@ -47,12 +47,12 @@ kind: Service
 apiVersion: v1
 metadata:
   labels:
-    app: edev-alibaba-trade-inventory
-  name: edev-alibaba-trade-inventory
+    app: edev-trade-inventory
+  name: edev-trade-inventory
   namespace: default
 spec:
   ports:
   - port: 9004
     targetPort: 9004
   selector:
-    app: edev-alibaba-trade-inventory
+    app: edev-trade-inventory
