--- a/skywalking/edev-alibaba-trade-order.yaml
+++ b/skywalking/edev-alibaba-trade-order.yaml
@@ -2,19 +2,19 @@ kind: Deployment
 apiVersion: apps/v1
 metadata:
   labels:
-    app: edev-alibaba-trade-order
-  name: edev-alibaba-trade-order
+    app: edev-trade-order
+  name: edev-trade-order
   namespace: default
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: edev-alibaba-trade-order
+      app: edev-trade-order
   template:
     metadata:
-      name: edev-alibaba-trade-order
+      name: edev-trade-order
       labels:
-        app: edev-alibaba-trade-order
+        app: edev-trade-order
     spec:
       affinity:
         podAntiAffinity:
@@ -26,7 +26,7 @@ spec:
                     - key: "app"
                       operator: In
                       values:
-                        - edev-alibaba-trade-order
+                        - edev-trade-order
                 topologyKey: "kubernetes.io/hostname"
       containers:
       - name: edev-alibaba-trade-order
@@ -60,12 +60,12 @@ kind: Service
 apiVersion: v1
 metadata:
   labels:
-    app: edev-alibaba-trade-order
-  name: edev-alibaba-trade-order
+    app: edev-trade-order
+  name: edev-trade-order
   namespace: default
 spec:
   ports:
   - port: 9005
     targetPort: 9005
   selector:
-    app: edev-alibaba-trade-order
+    app: edev-trade-order
