--- a/skywalking/edev-alibaba-trade-product.yaml
+++ b/skywalking/edev-alibaba-trade-product.yaml
@@ -2,19 +2,19 @@ kind: Deployment
 apiVersion: apps/v1
 metadata:
   labels:
-    app: edev-alibaba-trade-product
-  name: edev-alibaba-trade-product
+    app: edev-trade-product
+  name: edev-trade-product
   namespace: default
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: edev-alibaba-trade-product
+      app: edev-trade-product
   template:
     metadata:
-      name: edev-alibaba-trade-product
+      name: edev-trade-product
       labels:
-        app: edev-alibaba-trade-product
+        app: edev-trade-product
     spec:
       affinity:
         podAntiAffinity:
@@ -26,7 +26,7 @@ spec:
                     - key: "app"
                       operator: In
                       values:
-                        - edev-alibaba-trade-product
+                        - edev-trade-product
                 topologyKey: "kubernetes.io/hostname"
       containers:
       - name: edev-alibaba-trade-product
@@ -60,12 +60,12 @@ kind: Service
 apiVersion: v1
 metadata:
   labels:
-    app: edev-alibaba-trade-product
-  name: edev-alibaba-trade-product
+    app: edev-trade-product
+  name: edev-trade-product
   namespace: default
 spec:
   ports:
   - port: 9003
     targetPort: 9003
   selector:
-    app: edev-alibaba-trade-product
+    app: edev-trade-product
