--- a/nacos-cluster.yaml
+++ b/nacos-cluster.yaml
@@ -92,18 +92,22 @@ spec:
   selector:
     app: nacos
 ---
-kind: Service
-apiVersion: v1
+apiVersion: networking.k8s.io/v1
+kind: Ingress
 metadata:
-  labels:
-    app: nacos
-  name: nacos-svc
+  name: ingress-nacos
   namespace: default
+  annotations:
+    kubernetes.io/ingress.class: "nginx"
 spec:
-  type: NodePort
-  ports:
-    - port: 8848
-      targetPort: 8848
-      nodePort: 30848
-  selector:
-    app: nacos
+  rules:
+    - host: nacos
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: nacos
+                port:
+                  number: 8848
