--- a/nacos.yaml
+++ b/nacos.yaml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 metadata:
   labels:
     app: nacos
-  name: nacos 
+  name: nacos
   namespace: default
 spec:
   replicas: 1
@@ -17,35 +17,35 @@ spec:
         app: nacos
     spec:
       containers:
-      - name: nacos 
-        image: repository:5000/nacos/nacos-server
-        imagePullPolicy: Always
-        resources:
-          limits:
-            cpu: 500m
-            memory: 1500Mi
-          requests:
-            cpu: 100m
-            memory: 500Mi
-        env:
-        - name: "JVM_XMS"
-          value: "256m"
-        - name: "JVM_XMX"
-          value: "256m"
-        - name: "MODE"
-          value: "standalone"
-        - name: "PREFER_HOST_MODE"
-          value: "hostname"
-        - name: "MYSQL_SERVICE_HOST"
-          value: "mysql"
-        - name: "MYSQL_SERVICE_DB_NAME"
-          value: "nacos"
-        - name: "MYSQL_SERVICE_USER"
-          value: "nacos"
-        - name: "MYSQL_SERVICE_PASSWORD"
-          value: "nacos1234"
-        - name: "SPRING_DATASOURCE_PLATFORM"
-          value: "mysql"
+        - name: nacos
+          image: nacos/nacos-server:2.0.0
+          imagePullPolicy: Always
+          resources:
+            limits:
+              cpu: 500m
+              memory: 1500Mi
+            requests:
+              cpu: 100m
+              memory: 500Mi
+          env:
+            - name: "JVM_XMS"
+              value: "256m"
+            - name: "JVM_XMX"
+              value: "256m"
+            - name: "MODE"
+              value: "standalone"
+            - name: "PREFER_HOST_MODE"
+              value: "hostname"
+            - name: "MYSQL_SERVICE_HOST"
+              value: "mysql"
+            - name: "MYSQL_SERVICE_DB_NAME"
+              value: "nacos"
+            - name: "MYSQL_SERVICE_USER"
+              value: "nacos"
+            - name: "MYSQL_SERVICE_PASSWORD"
+              value: "nacos1234"
+            - name: "SPRING_DATASOURCE_PLATFORM"
+              value: "mysql"
 ---
 kind: Service
 apiVersion: v1
@@ -55,10 +55,28 @@ metadata:
   name: nacos
   namespace: default
 spec:
-  type: NodePort
   ports:
-  - port: 8848 
-    targetPort: 8848
-    nodePort: 30848
+    - port: 8848
+      targetPort: 8848
   selector:
     app: nacos
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: ingress-nacos
+  namespace: default
+  annotations:
+    kubernetes.io/ingress.class: "nginx"
+spec:
+  rules:
+    - host: nacos
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: nacos
+                port:
+                  number: 8848
