fix the bug about the feign interface.

--- a/edev-alibaba-trade-order/src/main/resources/bootstrap.yml
+++ b/edev-alibaba-trade-order/src/main/resources/bootstrap.yml
@@ -3,6 +3,8 @@ spring:
     name: service-order
   profiles:
     active: dev
+  main:
+    allow-bean-definition-overriding: true
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
