--- a/edev-alibaba-trade-order/src/test/resources/bootstrap.yml
+++ b/edev-alibaba-trade-order/src/test/resources/bootstrap.yml
@@ -2,6 +2,8 @@ spring:
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
+  main:
+    allow-bean-definition-overriding: true
   cloud:
     nacos:
       discovery:
