修改k8s部署脚本

--- a/edev-alibaba-gateway/src/main/resources/application.yml
+++ b/edev-alibaba-gateway/src/main/resources/application.yml
@@ -68,6 +68,8 @@ logging:
 ---
 spring:
   profiles: docker
+  config:
+    import: "nacos:"
   cloud:
     nacos:
       discovery:
@@ -82,6 +84,8 @@ server:
 ---
 spring:
   profiles: kafka
+  config:
+    import: "nacos:"
   cloud:
     nacos:
       discovery:
