--- a/edev-alibaba-product/src/main/resources/application.yml
+++ b/edev-alibaba-product/src/main/resources/application.yml
@@ -3,6 +3,8 @@ spring:
     name: service-product
   profiles:
     active: dev
+  config:
+    import: "optional:nacos:service-product.yaml"
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
@@ -25,8 +27,8 @@ spring:
         username: nacos
         password: nacos
       config:
-        enabled: false
-        refresh-enabled: false
+        server-addr: localhost:8848
+        file-extension: yaml
     sentinel:
       transport:
         dashboard: localhost:8858
@@ -36,6 +38,7 @@ spring:
     username: product
     password: product1234
     type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: com.mysql.cj.jdbc.Driver
   redis:
     database: 0
     host: kubernetes
@@ -59,9 +62,21 @@ management:
         include: '*'
 ---
 spring:
+  profiles: test
+  cloud:
+    nacos:
+      discovery:
+        server-addr: localhost:8848
+        username: nacos
+        password: nacos
+      config:
+        server-addr: localhost:8848
+        file-extension: yaml
+server:
+  port: 9003
+---
+spring:
   profiles: docker
-  config:
-    import: "nacos:"
   cloud:
     nacos:
       discovery:
